# PeopleSearchBot

./: .gitignore  README.md  pyproject.toml
ovdsearch/: __main__.py  cfg.py  console.py  db.py  webapp.py
